// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#32, Fail to escape variable with string and variable 1`] = `
.c0 {
  font-family: "Monospaced Number","Chinese Quote",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
}

<div
  className="c0"
/>
`;

exports[`#32, Fail to escape variable with string and variable from import 1`] = `
.c0 {
  font-family: "Monospaced Number less","Chinese Quote",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
}

<div
  className="c0"
/>
`;

exports[`#32, Fail to escape variable with string and variable from import 2`] = `
.c0 {
  font-family: "Monospaced Number less",font-family-no-number;
}

<div
  className="c0"
/>
`;

exports[`#34 1`] = `
.c0.ant-btn {
  font-size: 3.2rem;
  font-weight: 700;
  width: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0.ant-btn,
.c0.ant-btn:hover,
.c0.ant-btn:focus,
.c0.ant-btn:active,
.c0.ant-btn.active {
  background: none;
  border-color: transparent;
}

.c1.c1 {
  width: auto;
}

<div
  className="c0 c1"
/>
`;

exports[`#34 2`] = `
.c0.ant-btn {
  font-size: 3.2rem;
  font-weight: 700;
  width: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 1rem;
}

.c0.ant-btn,
.c0.ant-btn:hover,
.c0.ant-btn:focus,
.c0.ant-btn:active,
.c0.ant-btn.active {
  background: none;
  border-color: transparent;
}

.c1.c1 {
  width: 100%;
}

<div
  className="c0 c1"
/>
`;

exports[`Nested variables 1`] = `
.c0 {
  font-family: "root","Monospaced","Number","Third";
}

<div
  className="c0"
/>
`;

exports[`Nested variables 2`] = `
.c0 {
  font-family: "root","Monospaced","Number",Arial;
}

<div
  className="c0"
/>
`;

exports[`Replaces single variable in linear-gradient 1`] = `
.c0 {
  background: linear-gradient(red 0%,blue 100%);
}

<div
  className="c0"
  end="blue"
  start="red"
/>
`;

exports[`Takes the color from props 1`] = `
.c0 {
  background-color: chocolate;
  color: red;
}

<div
  className="c0"
/>
`;

exports[`Use the color defiened in the component 1`] = `
.c0 {
  color: palevioletred;
}

<div
  className="c0"
/>
`;
